Add overwrite pattern variables test.

--- a/packages/pattern/__int_tests__/_data/molecules/tests/pattern_preview_function.twig
+++ b/packages/pattern/__int_tests__/_data/molecules/tests/pattern_preview_function.twig
@@ -1,2 +1,2 @@
 field:{{ pattern_preview('ref_correct') }}
-setting:{{ pattern_preview('ref_correct') }}
+setting:{{ pattern_preview('ref', '', {'setting': 'correct'}) }}
