--- a/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -13,7 +13,7 @@
         {{ pattern_preview('card') }}
       {% endblock %}
       {% block column_2 %}
-        {{ pattern_preview('card') }}
+        {{ pattern_preview('card', '', {'headline': ' Second Card'}) }}
       {% endblock %}
       {% block column_3 %}
         {{ pattern_preview('card') }}
