--- a/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/button/button.twig
@@ -7,7 +7,8 @@
   {% set tag_name = 'a' %}
 {% endif %}
 {% set icon_size = ([
-  'ml-1',
+  svg_alignment == 'left' ? 'mr-1',
+  svg_alignment == 'right' ? 'ml-1',
   size == 'small' ? 'w-4 h-4',
   size == 'medium' ? 'w-5 h-5',
   size == 'large' ? 'w-6 h-6',
@@ -15,13 +16,14 @@
 
 <{{ tag_name }} {{ attributes.addClass([
   'flex items-center justify-center inline-flex border-0 py-1 px-2 focus:outline-none rounded',
-  variant == 'default' ? 'bg-'~ color ~' text-' ~ text_color ~' hover:bg-' ~ color ~ '-600',
-  variant == 'outline' ? 'border border-'~ color ~' text-' ~ text_color,
+  variant == 'default' ? pattern_configuration('button', 'default', 'colors')[colors],
+  variant == 'outline' ? 'border', pattern_configuration('button', 'outline', 'colors')[colors],
   expanded == 'full' ? 'w-full',
   size == 'small' ? 'text-xs',
   size == 'medium' ? 'text-base',
   size == 'large' ? 'text-xl',
   svg_alignment == 'left' ? 'flex-row-reverse',
+  svg_alignment == 'right' ? 'flex-row',
 ] | sort | join(' ') | trim) }}>
 {{ text }}
   {% if svg is not empty %}
