--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
@@ -1,12 +1,17 @@
+{# SETTINGS #}
 {% set element = element|default('article') %}
 {% set attributes = attributes|default(create_attribute()) %}
 {% set headline__element = headline__element|default('h2') %}
-{% if url is not empty %}
-  {% set attributes = attributes.setAttribute('href', url) %}
-  {% set element = 'a' %}
-{% endif %}
+
+{% set classes = [
+  alignment == 'center' ? 'text-center rounded': '',
+  bg_color == 'gray' ? 'bg-gray-200',
+  bg_color == 'blue' ? 'bg-blue-200',
+  'w-full flex flex-col flex-grow flex-shrink',
+] %}
+
 {% set image_classes = ([
-  alignment == 'center'?'justify-center': '',
+  alignment == 'center' ? 'justify-center' : '',
   'flex',
 ]) | sort | join(' ') | trim %}
 
@@ -15,39 +20,40 @@
   'text-indigo-500', 'inline-flex', 'md:mb-2', 'lg:mb-0',
 ]) | sort | join(' ') | trim %}
 
-<{{ element }} {{ attributes.addClass([
-  alignment == 'center' ? 'text-center rounded': '',
-  bg_color == 'gray' ? 'bg-gray-200',
-  bg_color == 'blue' ? 'bg-blue-200',
-  'w-full flex flex-col flex-grow flex-shrink',
-] | sort | join(' ') | trim) }}>
-<div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-  {% if image is not empty %}
-    {% block image %}
-      {{ image }}
-    {% endblock %}
-  {% endif %}
-  <div class="p-6">
-    <div class="tracking-widest text-lg title-font font-medium text-gray-500 mb-1">
-      {% block preheadline %}
-        {{ preheadline }}
+{% if url is not empty %}
+  {% set attributes = attributes.setAttribute('href', url) %}
+  {% set element = 'a' %}
+{% endif %}
+
+{# TEMPLATE #}
+<{{ element }} {{ attributes.addClass(classes | sort | join(' ') | trim) }}>
+  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+    {% if image is not empty %}
+      {% block image %}
+        {{ image }}
       {% endblock %}
-    </div>
-    <h2 class="title-font text-2xl font-medium text-gray-900 mb-3">
-      {% block headline %}
-        {{ headline }}
-      {% endblock %}
-    </h2>
-    <div class="leading-relaxed mb-3">
-      {% block text %}
-        {{ text }}
-      {% endblock %}
-    </div>
-    <div class="{{ link_classes }}">
-      {% block link %}
-        {{ link }}
-      {% endblock %}
+    {% endif %}
+    <div class="p-6">
+      <div class="tracking-widest text-lg title-font font-medium text-gray-500 mb-1">
+        {% block preheadline %}
+          {{ preheadline }}
+        {% endblock %}
+      </div>
+      <h2 class="title-font text-2xl font-medium text-gray-900 mb-3">
+        {% block headline %}
+          {{ headline }}
+        {% endblock %}
+      </h2>
+      <div class="leading-relaxed mb-3">
+        {% block text %}
+          {{ text }}
+        {% endblock %}
+      </div>
+      <div class="{{ link_classes }}">
+        {% block link %}
+          {{ link }}
+        {% endblock %}
+      </div>
     </div>
   </div>
-</div>
 </{{ element }}>
