WS #00: small fixes and adding description.

--- a/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.twig
@@ -2,7 +2,7 @@
 /**
  * @file
  * alert
- *
+ *here we have different types of alert with different colors for every situation.
  * See _alert.wingsuit.yaml for documentation.
  */
 #}
