--- a/packages/wingsuit/source/default/patterns/01-atoms/link/link.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/link/link.twig
@@ -1,6 +1,14 @@
+{#
+/**
+ * @file
+ * link
+ * we can use this link with icon for Ex. in cards at the bottom as more info link.
+ * See link.wingsuit.yaml for documentation.
+ */
+#}
+
 {% set tag_name = tag_name|default('div') %}
 {% set attributes = attributes|default(create_attribute()) %}
-{% set svg_size = svg_size|default('default') %}
 
 {% if url is not empty %}
   {% set attributes = attributes.setAttribute('href', url) %}
@@ -9,9 +17,9 @@
 
 <{{ tag_name }} {{ attributes.addClass(['text-pink-500 inline-flex items-center  md:mb-2 lg:mb-0'] | sort | join(' ') | trim) }}>
 {{ text }}
-  {% if svg is not empty %}
+  {% if icon is not empty %}
     {% include "@atoms/svg/_svg--icon.twig" with {
-      icon: svg,
+      icon: icon,
       size: 'w-4 h-4 ml-2',
     } only %}
   {% endif %}
