--- a/packages/wingsuit/source/default/patterns/01-atoms/rich-text/rich-text.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/rich-text/rich-text.twig
@@ -2,7 +2,8 @@
 /**
  * @file
  * rich-text
- *
+ * with the rich-text we can use to creat different types of text as you can see in storybook.
+ * Ex. headlines, list and more.
  * See rich-text.wingsuit.yaml for documentation.
  */
 #}
