Update container pattern.

--- a/packages/wingsuit/source/default/patterns/03-organisms/container/container.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/container/container.twig
@@ -10,42 +10,29 @@
 {% set width = width|default('default') %}
 
 {% set bg_classes = ([
-  bg == 'gray-medium' ? 'bg-gray-medium',
-  bg == 'gray-light' ? 'bg-gray-light'
+  pattern_configuration('container', variant, 'bg')[bg],
 ] | sort | join(' ') | trim )%}
 
 {% set classes = ([
-  padding_x == 'default' ? 'px-6',
-  padding_x == 'large' ? 'px-10',
-
-  padding_top == 'small' ? 'pt-4',
-  padding_top == 'default' ? 'pt-10 md:pt-20',
-  padding_top == 'large' ? 'pt-20 md:pt-30',
-
-  padding_bottom == 'small' ? 'pb-4',
-  padding_bottom == 'default' ? 'pt-10 md:pt-20',
-  padding_bottom == 'large' ? 'pt-20 md:pt-30',
-
-  width == 'small' ? 'max-w-800',
-  width == 'default' ? 'max-w-1200',
-  width == 'large' ? 'max-w-1600',
-  width == 'xlarge' ? 'max-w-1900',
+  pattern_configuration('container', variant, 'padding_x')[padding_x],
+  pattern_configuration('container', variant, 'padding_top')[padding_top],
+  pattern_configuration('container', variant, 'padding_bottom')[padding_bottom],
+  pattern_configuration('container', variant, 'width')[width],
   'px-6',
-  classes,
   'mx-auto'
 ] | sort | join(' ') | trim )%}
 
-{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
+{% set attributes = attributes|default(create_attribute()) %}
 
 {# TEMPLATE #}
 {% if bg %}
-<div {{ create_attribute().addClass(bg_classes) }}">
+<div {{ create_attribute().addClass(bg_classes) }}>
 {% endif %}
-  <div {{ attributes }}>
-    {% block content %}
-    {{ content }}
-    {% endblock %}
-  </div>
+<div {{ attributes.addClass(classes) }}>
+  {% block content %}
+  {{ content }}
+  {% endblock %}
+</div>
 {% if bg %}
 </div>
 {% endif %}
