--- a/packages/wingsuit/source/default/patterns/01-atoms/forms/_multi-value.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/forms/_multi-value.twig
@@ -19,6 +19,7 @@
  * @see template_preprocess_field_multiple_value_form()
  */
 #}
+{# TEMPLATES #}
 {% if multiple %}
   <div class="js-form-item form-item">
     {{ table }}
