--- a/packages/wingsuit/source/default/patterns/01-atoms/image/image.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/image/image.twig
@@ -4,9 +4,10 @@
  * Image component for images and background images.
  */
 #}
-
+{# SETTINGS #}
 {% set variant = variant|default('image') %}
 
+{# TEMPLATES #}
 {% if variant == 'image' %}
   {%- set image -%}
     {% if url is not empty %}
