--- a/packages/wingsuit/source/default/patterns/01-atoms/logo/logo.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/logo/logo.twig
@@ -7,7 +7,27 @@
  */
 #}
 
-<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-pink-500 rounded-full" viewBox="0 0 24 24">
-  <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-</svg>
-<span class="ml-3 text-xl">tailblocks</span>
+{# LOGO CLASSES #}
+{% set classes = ([
+  'flex title-font font-medium items-center md:justify-start justify-center text-gray-900',
+] | sort | join(' ') | trim )%}
+
+{% set svg_classes = ([
+  'w-10 h-10 text-white p-2 bg-pink-500 rounded-full',
+] | sort | join(' ') | trim )%}
+
+{% set svg_text_classes = ([
+  'ml-3 text-xl',
+] | sort | join(' ') | trim )%}
+
+{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
+
+{# TEMPLATE #}
+<a {{ attributes }}>
+  <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
+       stroke-linejoin="round" stroke-width="2" class="{{ svg_classes }}"
+       viewBox="0 0 24 24">
+    <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+  </svg>
+  <span class="{{ svg_text_classes }}">tailblocks</span>
+</a>
