--- a/packages/wingsuit/source/default/patterns/02-molecules/menu/menu.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/menu/menu.twig
@@ -1,3 +1,4 @@
+{# VARIANT TEMPLATES #}
 {% if variant == "primary" %}
   {% include '@molecules/menu/_menu--primary.twig' with {variant: 'primary', items: items} %}
 {% elseif variant == "footer" %}
