--- a/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/alert/alert.twig
@@ -6,26 +6,48 @@
  * See _alert.wingsuit.yaml for documentation.
  */
 #}
-  <div {{ create_attribute().addClass(
-    [
-    "p-5 w-full border-l-4",
-    variant == 'status' ? "bg-green-100 border-green-500 text-green-700",
-    variant == 'error' ? "bg-red-100 border-red-500 text-red-700",
-    variant == 'warning' ? "bg-orange-100 border-orange-500 text-orange-700"
-    ]|sort|join(' ')
-  ) }}>
-  <div class="flex space-x-3">
-    <div class="flex-none">
+
+{# ALERT CLASSES #}
+{% set wrapper_classes = ([
+  'flex space-x-3'
+]) | sort | join(' ') | trim %}
+
+{% set icon_classes = ([
+  'flex-none'
+]) | sort | join(' ') | trim %}
+
+{% set content_wrapper = ([
+  'leading-tight flex flex-col space-y-2'
+]) | sort | join(' ') | trim %}
+
+{% set content_classes = ([
+  'flex-1 leading-snug text-sm'
+]) | sort | join(' ') | trim %}
+
+{# VARIANTS #}
+{% set classes = ([
+  "p-5 w-full border-l-4",
+  variant == 'status' ? "bg-green-100 border-green-500 text-green-700",
+  variant == 'error' ? "bg-red-100 border-red-500 text-red-700",
+  variant == 'warning' ? "bg-orange-100 border-orange-500 text-orange-700"
+] | sort | join(' ') | trim )%}
+
+{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
+
+{# TEMPLATE #}
+<div {{ attributes }}>
+  <div class="{{ wrapper_classes }}">
+    <div class="{{ icon_classes }}">
     {% include "@atoms/svg/svg.twig" with {
       "icon": "alert--" ~ variant,
       "size": "w-6 h-6"
     } only %}
     </div>
-    <div class="leading-tight flex flex-col space-y-2">
+    <div class="{{ content_wrapper }}">
       <div class="font-bold">
         {% block header %}{{ header }}{% endblock %}
       </div>
-      <div class="flex-1 leading-snug text-sm ">
+      <div class="{{ content_classes }}">
         {% block content %}
           {{ content }}
         {% endblock %}
