--- a/packages/wingsuit/source/default/patterns/01-atoms/forms/_form-label.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/forms/_form-label.twig
@@ -12,6 +12,8 @@
  * @see template_preprocess_form_element_label()
  */
 #}
+
+{# FORM-LABEL CLASSES #}
 {%
   set classes = [
     title_display == 'after' ? 'option',
@@ -21,6 +23,8 @@
     'pr-4',
   ]
 %}
+
+{# TEMPLATE #}
 {% if title is not empty or required -%}
   <span{{ attributes.addClass(classes) }}>{{ title }}</span>
 {%- endif %}
