--- a/packages/wingsuit/source/default/patterns/01-atoms/link/link.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/link/link.twig
@@ -7,15 +7,22 @@
  */
 #}
 
+{# SETTINGS #}
 {% set tag_name = tag_name|default('div') %}
-{% set attributes = attributes|default(create_attribute()) %}
 
 {% if url is not empty %}
   {% set attributes = attributes.setAttribute('href', url) %}
   {% set tag_name = 'a' %}
 {% endif %}
 
-<{{ tag_name }} {{ attributes.addClass(['text-pink-500 inline-flex items-center  md:mb-2 lg:mb-0'] | sort | join(' ') | trim) }}>
+{% set classes = ([
+  'text-pink-500 inline-flex items-center  md:mb-2 lg:mb-0',
+] | sort | join(' ') | trim )%}
+
+{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
+
+{# TEMPLATE #}
+<{{ tag_name }} {{ attributes }}>
 {{ text }}
   {% if icon is not empty %}
     {% include "@atoms/svg/_svg--icon.twig" with {
