--- a/packages/wingsuit/source/default/patterns/01-atoms/svg/_svg--icon.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/svg/_svg--icon.twig
@@ -1,12 +1,14 @@
-{% set attributes = attributes|default(create_attribute()) %}
+{# SETTINGS #}
 {% set fill_color = fill_color|default('fill-current') %}
+{% set classes = ([
+  'svg',
+  fill_color,
+  size,
+] | sort | join(' ') | trim )%}
 
-<svg {{
-  attributes.addClass([
-    'svg',
-    fill_color,
-    size,
-  ] | sort | join(' ') | trim)
-  }}>
+{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
+
+{# TEMPLATE #}
+<svg {{ attributes }}>
     <use xlink:href="{{ file_url('ws-assets://images/spritemap.svg') }}#{{ icon }}"></use>
 </svg>
