--- a/packages/wingsuit/source/default/patterns/01-atoms/svg/svg.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/svg/svg.twig
@@ -1,4 +1,7 @@
+{# SETTINGS #}
 {% set variant = variant|default('icon') %}
+
+{# VATIANT TEMPLATES #}
 {% if variant == 'icon' %}
   {% include "@atoms/svg/_svg--icon.twig" %}
 {% elseif variant == 'inline-css' %}
