--- a/packages/wingsuit/source/default/patterns/01-atoms/video/video.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/video/video.twig
@@ -1,3 +1,4 @@
+{# TEMPLATE #}
 {% if video is empty and src is not empty %}
   <video controls>
     <source src="{{ file_url('ws-assets://videos/' ~ src ) }}" type="video/mp4">
