--- a/packages/wingsuit/source/default/patterns/02-molecules/accordion/accordion.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/accordion/accordion.twig
@@ -6,7 +6,14 @@
  * See accordion.wingsuit.yaml for documentation.
  */
 #}
+{# SETTINGS #}
+{% set classes = ([
+  'shadow-md'
+] | sort | join(' ') | trim )%}
 
-<div class="shadow-md">
+{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
+
+{# TEMPLATE #}
+<div {{ attributes }}>
   {{ items }}
 </div>
