--- a/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -1,13 +1,28 @@
-{% set attributes = attributes|default(create_attribute()) %}
-  <ul class="list-reset lg:flex justify-end flex-1 items-center">
-    {% for item in items %}
-      <li class="py-2 lg:py-0 border-b lg:border-b-0 border-black lg:mr-3">
-        {# {% if (item.in_active_trail) %}no-underline {% else %} hover:text-gray-900 hover:text-underline py-2 px-4{% endif %} #}
-        <a class="mr-5 text-gray-600 hover:text-gray-900"
-          href="{{ item.url }}">
-          {{ item.title }}
-        </a>
-      </li>
-    {% endfor %}
-  </ul>
+{# PRIMARY-MENU CLASSES  #}
+{% set classes = ([
+  'list-reset lg:flex justify-end flex-1 items-center',
+] | sort | join(' ') | trim )%}
+
+{% set menu_items_classes = ([
+  'py-2 lg:py-0 border-b lg:border-b-0 border-black lg:mr-3',
+] | sort | join(' ') | trim )%}
+
+{% set menu_link_classes = ([
+  'mr-5 text-gray-600 hover:text-gray-900',
+] | sort | join(' ') | trim )%}
+
+{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
+
+{# TEMPLATES #}
+<ul {{ attributes }}>
+  {% for item in items %}
+    <li class="{{ menu_items_classes }}">
+      {# {% if (item.in_active_trail) %}no-underline {% else %} hover:text-gray-900 hover:text-underline py-2 px-4{% endif %} #}
+      <a class="{{ menu_link_classes }}"
+        href="{{ item.url }}">
+        {{ item.title }}
+      </a>
+    </li>
+  {% endfor %}
+</ul>
 
