--- a/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/footer/footer.twig
@@ -3,9 +3,7 @@
     {% block content %}
       <div class="block lg:flex py-24">
         <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center mb-6 md:text-left">
-          <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-            {% include "@atoms/logo/logo.twig" %}
-          </a>
+          {% include "@atoms/logo/logo.twig" only %}
           <p class="mt-2 text-sm text-gray-500">Air plant banjo lyft occupy retro adaptogen indego</p>
         </div>
         <div class="w-full flex flex-col md:flex-row">
